FileTransfer (reading from disk happens on the processor) Created new Processor which is actually only 1 thread Updated FileTransferTest to generate a file, if one doesn't already exist.
git-svn-id: https://svn.mpi-sws.org/DS/freepastry/trunk@4577 c21dacaf-8602-0410-aacd-8bc41df2cbe7